--- a/contract-generator/package.json
+++ b/contract-generator/package.json
@@ -21,7 +21,11 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angularfire2": "^5.0.0-rc.9",
+    "body-parser": "^1.18.3",
     "core-js": "^2.4.1",
+    "express": "^4.16.3",
+    "firebase": "^5.0.4",
     "materialize-css": "^1.0.0-rc.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
